Fix a css bug on mobile

--- a/src/layouts/list-map/_style.scss
+++ b/src/layouts/list-map/_style.scss
@@ -97,6 +97,7 @@
     }
 
     .layout-content-list {
+      position: inherit;
 
       span.back-search-btn {
         display: none !important;
